--- a/index.html
+++ b/index.html
@@ -75,18 +75,20 @@
                         </div>
                         <div class="carousel-text">
                             <h2>Introduction to Start Smart</h2>		
-                            <h5><ul>
-                                <li>Start Smart is an educational youth organization that assists youths in Myanmar 
-                                to choose their career with their passion.</li>
-                                <li>We are processing with 3 sectors 
-                                such as education sectors, knowledge sharing sector and volunteering sector.</li>
-                                <li>Before we started this organization, we planned to run our organization 
+                            <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Start Smart is an educational youth organization that assists youths in Myanmar 
+                                to choose their career with their passion.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                We are processing with 3 sectors 
+                                such as education sectors, knowledge sharing sector and volunteering sector.
+                                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                Before we started this organization, we planned to run our organization 
                                 based on 4 programs such as Business Program, Information technology, 
-                                language programs and scholarship preparation program. <br>But when we started 
+                                language programs and scholarship preparation program. 
+                                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                But when we started 
                                 running the organization, our start smart team planned to add extra activities 
                                 which include youth based competitions, youth clubs, donation projects and workshops 
                                 that assist youths to choose their career to improve the youths’ creative skill and 
-                                to reach more community development. </li></ul>
+                                to reach more community development.
                             </h5>
                         </div>  
                     </div>
@@ -96,18 +98,20 @@
                         </div>
                         <div class="carousel-text">
                             <h2>Introduction to Start Smart</h2>		
-                            <h5><ul>
-                                <li>Start Smart is an educational youth organization that assists youths in Myanmar 
-                                to choose their career with their passion.</li>
-                                <li>We are processing with 3 sectors 
-                                such as education sectors, knowledge sharing sector and volunteering sector.</li>
-                                <li>Before we started this organization, we planned to run our organization 
+                            <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Start Smart is an educational youth organization that assists youths in Myanmar 
+                                to choose their career with their passion.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                We are processing with 3 sectors 
+                                such as education sectors, knowledge sharing sector and volunteering sector.
+                                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                Before we started this organization, we planned to run our organization 
                                 based on 4 programs such as Business Program, Information technology, 
-                                language programs and scholarship preparation program. <br>But when we started 
+                                language programs and scholarship preparation program. 
+                                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                But when we started 
                                 running the organization, our start smart team planned to add extra activities 
                                 which include youth based competitions, youth clubs, donation projects and workshops 
                                 that assist youths to choose their career to improve the youths’ creative skill and 
-                                to reach more community development. </li></ul>
+                                to reach more community development.
                             </h5>
                         </div>  
                     </div>
@@ -117,18 +121,20 @@
                         </div>
                         <div class="carousel-text">
                             <h2>Introduction to Start Smart</h2>		
-                            <h5><ul>
-                                <li>Start Smart is an educational youth organization that assists youths in Myanmar 
-                                to choose their career with their passion.</li>
-                                <li>We are processing with 3 sectors 
-                                such as education sectors, knowledge sharing sector and volunteering sector.</li>
-                                <li>Before we started this organization, we planned to run our organization 
+                            <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Start Smart is an educational youth organization that assists youths in Myanmar 
+                                to choose their career with their passion.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                We are processing with 3 sectors 
+                                such as education sectors, knowledge sharing sector and volunteering sector.
+                                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                Before we started this organization, we planned to run our organization 
                                 based on 4 programs such as Business Program, Information technology, 
-                                language programs and scholarship preparation program. <br>But when we started 
+                                language programs and scholarship preparation program. 
+                                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                But when we started 
                                 running the organization, our start smart team planned to add extra activities 
                                 which include youth based competitions, youth clubs, donation projects and workshops 
                                 that assist youths to choose their career to improve the youths’ creative skill and 
-                                to reach more community development. </li></ul>
+                                to reach more community development.
                             </h5>
                         </div>  
                     </div>
@@ -138,18 +144,20 @@
                         </div>
                         <div class="carousel-text">
                             <h2>Introduction to Start Smart</h2>		
-                            <h5><ul>
-                                <li>Start Smart is an educational youth organization that assists youths in Myanmar 
-                                to choose their career with their passion.</li>
-                                <li>We are processing with 3 sectors 
-                                such as education sectors, knowledge sharing sector and volunteering sector.</li>
-                                <li>Before we started this organization, we planned to run our organization 
+                            <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Start Smart is an educational youth organization that assists youths in Myanmar 
+                                to choose their career with their passion.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                We are processing with 3 sectors 
+                                such as education sectors, knowledge sharing sector and volunteering sector.
+                                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                Before we started this organization, we planned to run our organization 
                                 based on 4 programs such as Business Program, Information technology, 
-                                language programs and scholarship preparation program. <br>But when we started 
+                                language programs and scholarship preparation program. 
+                                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                But when we started 
                                 running the organization, our start smart team planned to add extra activities 
                                 which include youth based competitions, youth clubs, donation projects and workshops 
                                 that assist youths to choose their career to improve the youths’ creative skill and 
-                                to reach more community development. </li></ul>
+                                to reach more community development.
                             </h5>
                         </div>  
                     </div>
