--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                             <h2>Introduction to Start Smart</h2>		
                             <h5>Start Smart is an educational youth organization that assists youths in Myanmar 
                                 to choose their career with their passion.
+                                &#8680;	
                             </h5>
                         </div>  
                     </div>
@@ -88,7 +89,7 @@
                             <h2>Introduction to Start Smart</h2>		
                             <h5>
                                 We are processing with 3 sectors 
-                                such as education sectors, knowledge sharing sector and volunteering sector.
+                                such as education sectors, knowledge sharing sector and volunteering sector. &#8680;
                             </h5>
                         </div>  
                     </div>
@@ -101,7 +102,7 @@
                             <h5>
                                 Before we started this organization, we planned to run our organization 
                                 based on 4 programs such as Business Program, Information technology, 
-                                language programs and scholarship preparation program. 
+                                language programs and scholarship preparation program. &#8680;
                                 
                             </h5>
                         </div>  
@@ -117,7 +118,7 @@
                                 running the organization, our start smart team planned to add extra activities 
                                 which include youth based competitions, youth clubs, donation projects and workshops 
                                 that assist youths to choose their career to improve the youths’ creative skill and 
-                                to reach more community development.
+                                to reach more community development. &#8680;
                             </h5>
                         </div>  
                     </div>
