--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
         <br>
         <!-- Event Start -->
-        <div class="event">
+<!--         <div class="event">
             <div class="container">
                 <div class="section-header text-center">
                     <p>Upcoming Workshops</p>
@@ -324,7 +324,7 @@
                 </div>
             </div>
         </div><hr>
-        <!-- Event End -->
+ -->        <!-- Event End -->
 
         <!-- Testimonial Start -->
         <div class="testimonial">
