--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="owl-carousel">
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/home1.png" alt="Image">
+                            <img src="img/home3.png" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h2>Introduction to Start Smart</h2>		
@@ -83,7 +83,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/home2.png" alt="Image">
+                            <img src="img/home3.png" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h2>Introduction to Start Smart</h2>		
@@ -109,7 +109,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/home4.png" alt="Image">
+                            <img src="img/home3.png" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h2>Introduction to Start Smart</h2>		
@@ -235,6 +235,9 @@
         <!-- Facts Start -->
         <div class="facts">
                 <div class="container">
+                    <div class="facts-header">
+                        <h3>Start Smart in Number</h3>
+                    </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
                         <div class="facts-item">
@@ -335,7 +338,7 @@
 
                 <!-- Human Resource Team -->
                 <div class="team-title">
-                <p style="font-style: italic;"><u>Human Resource Team</u></p>
+                <p style="font-style: italic; font-size: 20px; font-weight: bold;">Human Resource Team</p> 
                 <div class="owl-carousel testimonials-carousel">
                     <div class="testimonial-item">
                         <div class="testimonial-profile">
@@ -442,7 +445,7 @@
 
                 <!-- PR Team-->
                 <div class="team-title">
-                    <p style="font-style: italic;"><u>Public Relation Team</u></p>
+                    <p style="font-style: italic;  font-size: 20px; font-weight: bold;">Public Relation Team</p>
                     <div class="owl-carousel testimonials-carousel">
                         <div class="testimonial-item">
                             <div class="testimonial-profile">
@@ -638,7 +641,7 @@
                     <!-- Program Development Team -->
 
                     <div class="team-title">
-                        <p style="font-style: italic;"><u>Program Development Team</u></p>
+                        <p style="font-style: italic; font-size: 20px; font-weight: bold;">Program Development Team</p>
                             <div class="owl-carousel testimonials-carousel">
                                 <div class="testimonial-item">
                                     <div class="testimonial-profile">
@@ -761,7 +764,7 @@
 
                     <!-- Finance Team -->
                     <div class="team-title">
-                        <p style="font-style: italic;"><u>Finance Team</u></p>
+                        <p style="font-style: italic; font-size: 20px; font-weight: bold;">Finance Team</p>
                         <div class="owl-carousel testimonials-carousel">
                             <div class="testimonial-item">
                                 <div class="testimonial-profile">
@@ -832,7 +835,7 @@
 
                         <!-- Administration Team -->
                         <div class="team-title">
-                            <p style="font-style: italic;"><u>Administration Team</u></p>
+                            <p style="font-style: italic; font-size: 20px; font-weight: bold;">Administration Team</p>
                             <div class="owl-carousel testimonials-carousel">
                                 <div class="testimonial-item">
                                     <div class="testimonial-profile">
