--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
                     <div class="testimonial-item">
                         <div class="testimonial-profile">
-                            <img src="img/HR_AHK.jpg" alt="Image">
+                            <img src="img/HR_AHK.JPG" alt="Image">
                             <div class="testimonial-name">
                                 <h3>Aung Htet Khant</h3>
                                 <p>HR Team Co-Leader</p>
