--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="event-item">
-                            <img src="img/home2.jpg" alt="Image">
+                            <img src="img/event-SS.jpg" alt="Image">
                             <h5>Success from Struggle Part (1)<br>3-Day Virtual Fundraising Workshop
                             </h5>
                             <div class="event-content">
@@ -274,7 +274,7 @@
 
                     <div class="col-lg-6">
                         <div class="event-item">
-                            <img src="img/home2.jpg" alt="Image">
+                            <img src="img/event-UKI.jpg" alt="Image">
                             <h5>U Know It? <br> 3-Day Virtual Fundraising Workshop
                             </h5>
                             <div class="event-content">
@@ -293,7 +293,6 @@
                             </div>
                         </div>
                     </div>
-                    
 
                 </div>
             </div>
