--- a/index.html
+++ b/index.html
@@ -235,6 +235,15 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="facts-item">
+                            <i class="flaticon-charity"></i>
+                            <div class="facts-text">
+                                <h3 class="facts-plus" data-toggle="counter-up">7</h3>
+                                <p>Programs</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
