--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>Start Smart Organization</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Free Website Template" name="keywords">
-        <meta content="Free Website Template" name="description">
+        <meta content="Start Smart Organization" name="keywords">
+        <meta content="Start Smart Organization" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -1078,7 +1078,7 @@
                                         <p><i>Strategy First University (Business Management)
                                         </i></p>
                                         <p class="exp">
-                                            It's literally so fun to work in this organization. All members are so nice and I feel like I am in a big warm family. My communication skills has improved a lot because as a team leader of administration, I have to work with other teams. Sometimes, I might be a little bit busy with my studies and my work but that's why my time management skill has been beyond my expectation. This job totally offered me about the experienceof working in a real organization and helped me with my future career. I'm so glad that I decided to work here.
+                                            It's literally so fun to work in this organization. All members are so nice and I feel like I'm in a big warm family. I've improved my communication skill a lot because as a team leader of the administration, I have to work with other teams. Sometimes, I might be a little bit busy with my studies and my work but that's why my time management skill has been beyond my expectation. This job totally offered me about the experience of working in a real organization and helped me with my future career. I'm so glad that I decided to work here.
                                         </p>
                                     </div>
                                 </div>
@@ -1111,7 +1111,7 @@
                                         <p><i>Info Myanmar University 
                                         </i></p>
                                         <p class="exp">
-                                            Communication skill, Work with team work skill, Time management skill, Teaching skill
+                                            This is my starting point of volunteer jobs. I really like to work with Start Smart because it is a good organization. I have also improved my communication skills and teaching skills.
                                         </p>
                                     </div>
                                 </div>
