--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-profile">
-                            <!-- <img src="img/HR_TYWT.JPG" alt="Image"> -->
+                            <img src="img/HR_Thiri Myo Myat Win@Victoria.JPG" alt="Image"> 
                             <div class="testimonial-name">
                                 <h3>Thiri Myo Myat Win </h3>
                                 <p>HR Officer</p>
@@ -681,7 +681,7 @@
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-profile">
-                            <!-- <img src="img/HR_TYWT.JPG" alt="Image"> -->
+                            <img src="img/HR_Han Thazin Nyein.JPG" alt="Image">
                             <div class="testimonial-name">
                                 <h3>Han Thazin Nyein</h3>
                                 <p>HR Officer</p>
@@ -697,7 +697,7 @@
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-profile">
-                            <!-- <img src="img/HR_TYWT.JPG" alt="Image"> -->
+                            <img src="img/HR_Phoo Myat Su Yee.JPG" alt="Image">
                             <div class="testimonial-name">
                                 <h3>Phoo Myat Su Yee</h3>
                                 <p>Human Resources Officer </p>
@@ -713,7 +713,7 @@
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-profile">
-                            <!-- <img src="img/HR_TYWT.JPG" alt="Image"> -->
+                            <img src="img/HR_Moe Sandar Oo@Stellar.JPG" alt="Image">
                             <div class="testimonial-name">
                                 <h3>Stellar </h3>
                                 <p>HR,Co-leader</p>
@@ -729,7 +729,7 @@
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-profile">
-                            <!-- <img src="img/HR_TYWT.JPG" alt="Image"> -->
+                            <img src="img/HR_Grace Khine.JPG" alt="Image">
                             <div class="testimonial-name">
                                 <h3>Phyoe Shwe Yi Khine</h3>
                                 <p>Human Resources Officer </p>
@@ -965,7 +965,7 @@
                         </div>
                         <div class="testimonial-item">
                             <div class="testimonial-profile">
-                                <!-- <img src="img/PR_NNTH.JPG" alt="Image"> -->
+                                <img src="img/PR_May Phoo Shwe Sin Maung.JPG" alt="Image">
                                 <div class="testimonial-name">
                                     <h3>May Phoo Shwe Sin Maung</h3>
                                     <p><i>Content Writer</i></p>
@@ -980,7 +980,7 @@
                         </div>
                         <div class="testimonial-item">
                             <div class="testimonial-profile">
-                                <!-- <img src="img/PR_NNTH.JPG" alt="Image"> -->
+                                <img src="img/Phoo Pyae Pyae Maung.JPG" alt="Image">
                                 <div class="testimonial-name">
                                     <h3>Phoo Pyae Pyae Maung</h3>
                                     <p><i>Content Writer</i></p>
@@ -995,7 +995,7 @@
                         </div>
                         <div class="testimonial-item">
                             <div class="testimonial-profile">
-                                <!-- <img src="img/PR_NNTH.JPG" alt="Image"> -->
+                                <img src="img/PR_Yoon Me Me Phyo.JPG" alt="Image">
                                 <div class="testimonial-name">
                                     <h3>Yoon Me Me Phyo</h3>
                                     <p><i>Content Writer</i></p>
@@ -1010,7 +1010,7 @@
                         </div>
                          <div class="testimonial-item">
                             <div class="testimonial-profile">
-                                <!-- <img src="img/PR_NNTH.JPG" alt="Image"> -->
+                                <img src="img/PR_Pyae Sone Hein.JPG" alt="Image">
                                 <div class="testimonial-name">
                                     <h3>Pyae Sone</h3>
                                     <p><i>Content Writer</i></p>
@@ -1025,7 +1025,7 @@
                         </div>
                         <div class="testimonial-item">
                             <div class="testimonial-profile">
-                                <!-- <img src="img/PR_NNTH.JPG" alt="Image"> -->
+                                <img src="img/PR_Han Hsu Win.JPG" alt="Image">
                                 <div class="testimonial-name">
                                     <h3>Han Hsu Win</h3>
                                     <p><i>Content Writer</i></p>
@@ -1040,7 +1040,7 @@
                         </div>
                         <div class="testimonial-item">
                             <div class="testimonial-profile">
-                                <!-- <img src="img/PR_NNTH.JPG" alt="Image"> -->
+                                <img src="img/PR_Kyaw Naing Soe.JPG" alt="Image">
                                 <div class="testimonial-name">
                                     <h3>Kyaw Naing Soe</h3>
                                     <p><i>Content Team Leader</i></p>
@@ -1055,7 +1055,7 @@
                         </div>
                         <div class="testimonial-item">
                             <div class="testimonial-profile">
-                                <!-- <img src="img/PR_NNTH.JPG" alt="Image"> -->
+                                <img src="img/Htet Khant Zan.JPG" alt="Image">
                                 <div class="testimonial-name">
                                     <h3>Htet Khant Zan</h3>
                                     <p><i>Graphic Designer</i></p>
@@ -1065,6 +1065,36 @@
                                 <p><i>NRDC Yangon </i></p>
                                 <p class="exp">
                                    Start Smart make me to understand how to work with team and  communicate with the others.                              
+                                </p>
+                            </div>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="testimonial-profile">
+                                <img src="img/PR_Su Nandar.JPG" alt="Image">
+                                <div class="testimonial-name">
+                                    <h3>Su Nandar</h3>
+                                    <p><i>Content Writer</i></p>
+                                </div>
+                            </div>
+                            <div class="testimonial-text">
+                                <p><i>Final Year student at Yangon University of Economic</i></p>
+                                <p class="exp">
+                                   I got a chance to upgrade my content writing skill. And I got a lot of insightful knowledge and practical ideas from Start Smart. Ideas sharing is my favourite part in PR team. At 1st week of new month team meeting, I can listen our opinions and thoughts. I really love it. Start Smart is also thinking about our capacity building such as content writing training with professional trainer. The main point is that Start Smart gives us many chances to get new experiences in different fields such as facilitator at workshop or events.                              
+                                </p>
+                            </div>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="testimonial-profile">
+                                <img src="img/PR_Su Zin Win.JPG" alt="Image">
+                                <div class="testimonial-name">
+                                    <h3>Su Zin Win</h3>
+                                    <p><i>Graphic Designer</i></p>
+                                </div>
+                            </div>
+                            <div class="testimonial-text">
+                                <p><i>Technological University (YMT)</i></p>
+                                <p class="exp">
+                                   Start Smart is a systematic and fun organization.Teammates are friendly too. Leaders are comfortable and can discuss whatever is needed.Start Smart provides us a lot of training. In addition to tournaments and game programs,it also allows us to share with each other in meetings.Start Smart is one of the best organizations I have ever volunteered for.It's really rewarding to learn so much from Start Smart.                              
                                 </p>
                             </div>
                         </div>
@@ -1193,7 +1223,7 @@
                                 </div>
                                 <div class="testimonial-item">
                                     <div class="testimonial-profile">
-                                        <!-- <img src="img/PD_AMT.jpg" alt="Image"> -->
+                                        <img src="img/PD_Yamone Aye.JPG" alt="Image">
                                         <div class="testimonial-name">
                                             <h3>Yamone Aye 
                                             </h3>
@@ -1210,7 +1240,7 @@
                                 </div>
                                  <div class="testimonial-item">
                                     <div class="testimonial-profile">
-                                        <!-- <img src="img/PD_AMT.jpg" alt="Image"> -->
+                                        <img src="img/Moe Aye Aye Myint.JPG" alt="Image">
                                         <div class="testimonial-name">
                                             <h3>Moe Aye Aye Myint 
                                             </h3>
@@ -1391,7 +1421,7 @@
                                 </div>
                                 <div class="testimonial-item">
                                     <div class="testimonial-profile">
-                                        <!-- <img src="img/AD_KSH.JPG" alt="Image"> -->
+                                        <img src="img/AD_Swe Swe Naing.JPG" alt="Image">
                                         <div class="testimonial-name">
                                             <h3>Swe Swe Naing</h3>
                                             <p><i>Classroom Management Officer</i></p>
@@ -1407,7 +1437,7 @@
                                 </div>
                                 <div class="testimonial-item">
                                     <div class="testimonial-profile">
-                                        <!-- <img src="img/AD_KSH.JPG" alt="Image"> -->
+                                        <img src="img/Yoon Eaindray Kyaw.JPG" alt="Image">
                                         <div class="testimonial-name">
                                             <h3>Yoon Eaindray Kyaw</h3>
                                             <p><i>Administration officer </i></p>
@@ -1423,7 +1453,7 @@
                                 </div>
                                 <div class="testimonial-item">
                                     <div class="testimonial-profile">
-                                        <!-- <img src="img/AD_KSH.JPG" alt="Image"> -->
+                                        <img src="img/Administration_Zaw Win Naing.JPG" alt="Image">
                                         <div class="testimonial-name">
                                             <h3>Zaw Win Naing</h3>
                                             <p><i>Classroom Management Officer </i></p>
@@ -1439,7 +1469,7 @@
                                 </div>
                                 <div class="testimonial-item">
                                     <div class="testimonial-profile">
-                                        <!-- <img src="img/AD_KSH.JPG" alt="Image"> -->
+                                        <img src="img/Administration_Thet Hmu Khaing.JPG" alt="Image">
                                         <div class="testimonial-name">
                                             <h3>Thet Hmu Khaing</h3>
                                             <p><i>Classroom Management Officer </i></p>
@@ -1455,7 +1485,7 @@
                                 </div>
                                 <div class="testimonial-item">
                                     <div class="testimonial-profile">
-                                        <!-- <img src="img/AD_KSH.JPG" alt="Image"> -->
+                                        <img src="img/Administration_Hsu Myatt Kalayar.JPG" alt="Image">
                                         <div class="testimonial-name">
                                             <h3>Hsu Myatt Kalayar</h3>
                                             <p><i>Classroom Management Officer </i></p>
@@ -1466,6 +1496,22 @@
                                         </i></p>
                                         <p class="exp">
                                            It was my first time volunteering when i got into start smart.Leader and team-mates ,also the founder helped me alot.I've learnt many things from members.Especially I have improved a lot of my communication skills, public speaking skills and teamwork skills and many other things.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="testimonial-item">
+                                    <div class="testimonial-profile">
+                                        <img src="img/Administration_Kyaw Zin Latt.JPG" alt="Image">
+                                        <div class="testimonial-name">
+                                            <h3>Kyaw Zin Latt</h3>
+                                            <p><i>Classroom Management Officer </i></p>
+                                        </div>
+                                    </div>
+                                    <div class="testimonial-text">
+                                        <p><i>Strategy First University 
+                                        </i></p>
+                                        <p class="exp">
+                                           I got many experience like soft skills such as leadership skill, organisational skill, communication skill, classroom management skill, technical skill, and time management skills. Moreover, I got many active and enthusiastic youths that can expand my professional youth network.
                                         </p>
                                     </div>
                                 </div>
